Fixed images on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,46 @@ img{
   body {
     padding: 0px;
   }
+  .coolImages{
+    padding:1px;
+    height: 200px;
+    width: 300px;
+    padding-right: 6px;
+  }
+  .card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 8px;
+    margin: 2px;
+    background-color: #484c54;
+  }
+  .cardContainer{
+    padding: 0px;
+  }
 }
+
+@media only screen and (max-width: 1125px) {
+  body {
+    padding: 0px;
+  }
+  .coolImages{
+    padding:1px;
+    height: 200px;
+    width: 300px;
+    padding-right: 6px;
+  }
+  .card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 8px;
+    margin: 2px;
+    background-color: #484c54;
+  }
+  .cardContainer{
+    padding: 0px;
+  }
+}
+
 /* a{
   text-decoration: none;
   color: white;
